essay: update about AI and IT engineer

--- a/essay/how_to_work_with_ai.html
+++ b/essay/how_to_work_with_ai.html
@@ -50,6 +50,8 @@
 
 <p>AIが1秒でできる実装に価値はないのです。いや、もとからなかったのです。今までたまたま許されていただけで、AIによってそれが再確認されただけです。むしろそれに時間を費やさなくてよかったと思うことにしましょう。AIはみんながやっていることをやります。あなたはあなたにしかできないことをやってあなた独自の価値を生み出すべきです。AIは人間から仕事を奪うのではなく、各自が持っている真の専門能力を浮き彫りにさせるのです。</p>
 
+<p>ソフトウェアを売るということは問題解決方法を提供するということです。今ソフトウェアによって解決しなければいけない問題はなにか。今提供しているソフトウェアをベースに新たに解決できそうな問題はなにか。ユーザはそれで満足しているか。ユーザの要求を満たすためにはどのような設計が必要か。設計をもとに実装するにはどのように人やお金を使わないといけないか。実装されたコードはどのようにテストすれば品質が担保されていると言えるのか。製品をどのように市場へアピールするか。雇われの身ではただ単にプログラミングをしていれば銀行口座に給料が振り込まれると思いがちですが、それは問題解決方法を提供するための末端の作業でしかありません。そしてそれはみんなが書くようなものであればあるほど（学習データに多く含まれていればいるほど）AIに取って代わられてしまいます。</p>
+
 <p>AIを使っても実力を発揮できる領域がない場合はどうすればいいのでしょうか？難しいですが単純です。鍛えればいいのです。より面倒なこと、より難しいことに挑戦していってAIではカバーし切れない深い仕事に取り組んでいくしかありません。幸いにも日本は会社が従業員を解雇するハードルが高いように法整備されていますから、この文章を読めている時点で頑張る時間はまだ残されていると思います。</p>
 
 <p>ではこれからIT業界を志す人間はどうすればいいのでしょうか？それもこれまでの話の流れを汲んで考えればいいのです。つまり、AIがカバーし切れない領域まで面倒をみる真のエキスパートを志していくのです。ただしその領域はAI開発が進むほどに狭くなっていくでしょう。それでも探求を止めないこと、探求し続けられるように訓練していくこと、またそのような姿勢を証拠を以てアピールできることが求職者にとって一層大事になっていきます。IT企業側も事業が高度になればなるほど、単に人手を増やすための採用戦略から脱出して、はじめに挙げた様々なコストを払ってでも投資に値する人材を見極めようとするはずです。厳しいですが、これまでどおりかそれ以上のやりがいはあるはずです。</p>
